# Vulkan

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Includes/: DebugInfoLog.hpp  HelloTriangle.cpp  HelloTriangle.hpp  Structs.hpp  Utils.hpp  VertexData.hpp  VulkanApp.cpp  VulkanApp.hpp
Includes/Camera/: Camera.cpp  Camera.hpp
Includes/Material/: Material.cpp  Material.hpp
Includes/Models/: TIE Fighter.mtl
Includes/stb/: stb_image.cpp  stb_image.h
Includes/tiny_obj_loader/: tiny_obj_loader.cpp
Shaders/: compile.sh
Shaders/Compiled/: TriangleVertex.spv
Shaders/Compute/: Particles.comp  Particles.comp.glsl
Shaders/Fragment/: ParticleFragment.frag  TriangleFragment.frag
Shaders/Vertex/: ParticleVertex.vert  TriangleVertex.vert
VkNotes/: Appendix A - PBR Sphere.md
VkNotes/.obsidian/: graph.json  workspace.json
VkNotes/1. Introduction/: 1.1 General overview.md  1.2 What it takes to render triangle.md  1.3 API Concepts.md
VkNotes/10. Mip maps/: 10.1 Introduction.md  10.2 Generating mip-maps.md  10.3 Configuring sampler.md
VkNotes/11. Multi sampling/: 11.1 Introduction.md  11.2 Setting render target.md  11.3 Adding new attachemnt.md
VkNotes/12. Compute shaders/: 12.1 Introduction.md  12.2 Compute queue families.md  12.3 Shader storage buffers.md  12.4 Descriptors.md  12.5 Compute pipeline.md  12.6 Compute shader code.md  12.7 Submitting work.md
VkNotes/2. HelloTriangle/: 2.1 Instance.md  2.2 Validation Layers.md  2.3 Physical device and queue families.md  2.4 Logical device and queues.md  2.5 Window surface.md  2.6 Swap chain.md  2.7 Image views.md
VkNotes/3. Pipeline/: 3.1 Graphics pipeline in Vulkan.md  3.2 Shader modules.md  3.3 Fixed function pipeline.md  3.4  Render pass.md  3.4 Render pass.md  3.5 Combination.md
VkNotes/4. Drawing/: 4.1 Frame buffer.md  4.2 Command buffer.md  4.3 Rendering and presentation.md  4.4 Presentation.md  4.5 Frames in flight.md
VkNotes/5. Swap chain recreation/: 5.1  Recreating the swap chain.md  5.2 Handling resize and minimalization.md
VkNotes/6 Buffers/: 6.1 Vertex input description.md  6.7 Uniform buffer.md  6.8 Descriptor and pool set.md
VkNotes/6 Vertex buffer/: 6.1 Vertex input description.md  6.2 Pipeline setup.md  6.3 Creating vertex buffer.md  6.4 Filling in the vertex buffer.md  6.5 Staging buffer.md  6.6 Index buffer.md
VkNotes/6. Buffers/: 6.3 Creating vertex buffer.md  6.4 Filling in the vertex buffer.md  6.8 Descriptor and pool set.md  6.9 Alignment requirements.md
VkNotes/7. Texturing/: 7.1 Images.md  7.2 Layout transition.md  7.3 Image view and sampler.md  7.4 Combined image sampler.md
VkNotes/8. Depth testing/: 8.1 Introduction.md  8.2 Depth Image and View.md  8.3 Render pass alteration.md
VkNotes/9. Model loading/: 9.1 Introduction.md  9.1 Loading a model.md
build-coverage/: .ninja_deps  .ninja_log  LearnVulkan  build.ninja
build-coverage/.cmake/api/v1/reply/: cache-v2-5a5dc5a8f7a705f271bb.json  cmakeFiles-v1-6aaad4061719071d7b82.json  cmakeFiles-v1-a8d793ee2e0d7b2d79ba.json  codemodel-v2-dfc3f2e3f342b10f0fc3.json  codemodel-v2-e935fb312f8244115e34.json  index-2024-09-07T07-31-05-0337.json  index-2024-09-07T08-03-06-0211.json  target-LearnVulkan-Debug-2267bc83371071124990.json  target-LearnVulkan-Debug-4a570a904cba60f517e1.json  target-reset-Debug-1f651ceb695582713e76.json  target-reset-Debug-b8a15c14e634b6a85610.json  target-run-Debug-a44dee3bd34449114fa9.json  target-run-Debug-c79141d63f5f9659d7d8.json  toolchains-v1-9433b1762e9df0bb3536.json
src/: main.cpp
